force-app/main/default/objects/Assignment_Rule_Entry__c/Assignment_Rule_Entry__c.object-meta.xml
<CustomObject>
    <label>Assignment Rule Entry</label>
    <nameField>
        <label>Assignment Rule Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>