force-app/main/default/objects/Assignment_Rule_Entry__c/fields/Assign_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Name__c</fullName>
    <label>Assign To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>