force-app/main/default/objects/Assignment_Rule_Entry__c/fields/Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To Queue</label>
    <referenceTo>Assignment_Queue__c</referenceTo>
    <relationshipLabel>Assignment Rule Entries</relationshipLabel>
    <relationshipName>Assignment_Rule_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>