force-app/main/default/objects/Assignment_Rule_Entry__c/fields/Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rule__c</fullName>
    <label>Assignment Rule</label>
    <referenceTo>Assignment_Rule__c</referenceTo>
    <relationshipLabel>Assignment Rule Entries</relationshipLabel>
    <relationshipName>Assignment_Rule_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>