force-app/main/default/objects/Assignment_Rule_Entry__c/fields/Criteria_Logic__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Logic__c</fullName>
    <label>Criteria Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>