force-app/main/default/objects/Assignment_Rule_Entry__c/fields/Criteria_Set__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Set__c</fullName>
    <label>Criteria Set</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>